--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <!-- Добавлен span для стилизации цветом -->
                 <a href="./index.html" aria-label="логотоип сайта" class="nav-logo"><span>Web</span>Studio</a>
             
-                <ul class="nav__list list">
+                <ul class="nav__list">
                     <li class="nav__item">
                         <a href="./index.html" class="nav__link current">Студия</a>
                     </li>
@@ -33,15 +33,15 @@
                 </ul>
             </nav>
             <ul class="contacts-list">
-                <li class="contacts-list-item">
-                        <a href="mailto:info@devstudio.com" class="header-address-link">
+                <li class="contacts-list__item">
+                        <a href="mailto:info@devstudio.com" class="contacts-list__link">
                             <svg class="mail" width="16" height="12">
                                 <use href="./images/sprite.svg#mail"></use>
                             </svg>info@devstudio.com
                         </a>
                 </li>
-                <li class="contacts-list-item">
-                    <a href="tel:+380961111111" class="header-address-link">
+                <li class="contacts-list__item">
+                    <a href="tel:+380961111111" class="contacts-list__link">
                         <svg class="tel" width="10" height="16">
                             <use href="./images/sprite.svg#tel"></use>
                         </svg>+38 096 111 11 11
