--- a/portfolio.html
+++ b/portfolio.html
@@ -34,16 +34,16 @@
                 </ul>
             </nav>
             <ul class="contacts-list">
-                <li class="contacts-list-item">
-                    <a href="mailto:info@devstudio.com" class="header-address-link">
-                        <svg class="mail" width="16" height="12">
+                <li class="contacts-list__item">
+                    <a href="mailto:info@devstudio.com" class="contacts-list__link">
+                        <svg class="mail-icon" width="16" height="12">
                             <use href="./images/sprite.svg#mail"></use>
                         </svg>info@devstudio.com
                     </a>
                 </li>
-                <li class="contacts-list-item">
-                    <a href="tel:+380961111111" class="header-address-link tel">
-                        <svg class="tel" width="10" height="16">
+                <li class="contacts-list__item">
+                    <a href="tel:+380961111111" class="contacts-list__link">
+                        <svg class="tel-icon" width="10" height="16">
                             <use href="./images/sprite.svg#tel"></use>
                         </svg>+38 096 111 11 11
                     </a>
