--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
     <main>
             <!--HERO -- Эффективные решения-->
-            <section class="hero-section">
+            <section class="hero">
                 <div class="container">
-                    <h1 class="hero-title">Эффективные решения<br>
+                    <h1 class="hero__title">Эффективные решения<br>
                         для вашего бизнеса</h1>
                     <button class="hero-btn btn" type="button" data-modal-open>Заказать услугу</button>
                 </div>
