--- a/index.html
+++ b/index.html
@@ -65,47 +65,47 @@
             <section class="features">
                 <div class="container">
                     <h2 class="visually-hidden">Особенности</h2>
-                    <ul class="features-list">
-                        <li class="features-item">
-                            <div class="features-item-bg">
-                                <svg class="features-item-icon" width="70" height="70">
+                    <ul class="features__list">
+                        <li class="features__item">
+                            <div class="features__bg">
+                                <svg class="features__icon" width="70" height="70">
                                     <use href="./images/sprite.svg#antenna">
                                     </use>
                                 </svg>
                             </div>
-                            <h3 class="features-title uppertitle">Внимание к деталям</h3>
-                            <p class="features-desc">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                            <h3 class="features__title uppertitle">Внимание к деталям</h3>
+                            <p class="features__title-desc">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
-                        <li class="features-item">
-                            <div class="features-item-bg">
-                                <svg class="features-item-icon" width="70" height="70">
+                        <li class="features__item">
+                            <div class="features__bg">
+                                <svg class="features__icon" width="70" height="70">
                                     <use href="./images/sprite.svg#clock">
                                     </use>
                                 </svg>
                             </div>
-                            <h3 class="features-title uppertitle">Пунктуальность</h3>
-                            <p class="features-desc">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                            <h3 class="features__title uppertitle">Пунктуальность</h3>
+                            <p class="features__title-desc">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
-                        <li class="features-item">
-                            <div class="features-item-bg">
-                                <svg class="features-item-icon" width="70" height="70">
+                        <li class="features__item">
+                            <div class="features__bg">
+                                <svg class="features__icon" width="70" height="70">
                                     <use href="./images/sprite.svg#diagram">
                                     </use>
                                 </svg>
                             </div>
-                            <h3 class="features-title uppertitle">Планирование</h3>
-                            <p class="features-desc">Равным образом консультация с широким активом в значительной степени обуславливает.
+                            <h3 class="features__title uppertitle">Планирование</h3>
+                            <p class="features__title-desc">Равным образом консультация с широким активом в значительной степени обуславливает.
                             </p>
                         </li>
-                        <li class="features-item">
-                            <div class="features-item-bg">
-                                <svg class="features-item-icon" width="70" height="70">
+                        <li class="features__item">
+                            <div class="features__bg">
+                                <svg class="features__icon" width="70" height="70">
                                     <use href="./images/sprite.svg#astronaut">
                                     </use>
                                 </svg>
                             </div>
-                            <h3 class="features-title uppertitle">Современные технологии</h3>
-                            <p class="features-desc">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                            <h3 class="features__title uppertitle">Современные технологии</h3>
+                            <p class="features__title-desc">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
                     </ul>
                 </div>
