--- a/index.html
+++ b/index.html
@@ -145,141 +145,141 @@
             <section class="team block">
                 <div class="container">
                     <h2 class="team-title">Наша команда</h2>
-                    <ul class="team-list">
-                        <li class="team-item">
-                            <img src="./images/our-team/product-designer.jpg" alt="Продакт Дизайнер" width="270">
-                            <h3 class="team-empl-name">Игорь Демьяненко</h3>
-                            <p class="team-position" lang="en">Product Designer</p>
+                    <ul class="team__list">
+                        <li class="team__list-item">
+                            <img src="./images/our-team/product-designer.jpg" alt="Продакт Дизайнер" width="270" height="260">
+                            <h3 class="team__list-name">Игорь Демьяненко</h3>
+                            <p class="team__list-position" lang="en">Product Designer</p>
                             <ul class="social-list">
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="team-item">
-                            <img src="./images/our-team/frontend-developer.jpg" alt="Фронтенд разработчик" width="270">
-                            <h3 class="team-empl-name">Ольга Репина</h3>
-                            <p class="team-position" lang="en">Frontend Developer</p>
+                        <li class="team__list-item">
+                            <img src="./images/our-team/frontend-developer.jpg" alt="Фронтенд разработчик" width="270" height="260">
+                            <h3 class="team__list-name">Ольга Репина</h3>
+                            <p class="team__list-position" lang="en">Frontend Developer</p>
                             <ul class="social-list">
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="team-item">
-                            <img src="./images/our-team/marketing.jpg" alt="Маркетоллог" width="270">
-                            <h3 class="team-empl-name">Николай Тарасов</h3>
-                            <p class="team-position" lang="en">Marketing</p>
+                        <li class="team__list-item">
+                            <img src="./images/our-team/marketing.jpg" alt="Маркетоллог" width="270" height="260">
+                            <h3 class="team__list-name">Николай Тарасов</h3>
+                            <p class="team__list-position" lang="en">Marketing</p>
                             <ul class="social-list">
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="team-item">
-                            <img src="./images/our-team/ui-designer.jpg" alt="UI Дизайнер" width="270">
-                            <h3 class="team-empl-name">Михаил Ермаков</h3>
-                            <p class="team-position" lang="en">UI Designer</p>
+                        <li class="team__list-item">
+                            <img src="./images/our-team/ui-designer.jpg" alt="UI Дизайнер" width="270" height="260">
+                            <h3 class="team__list-name">Михаил Ермаков</h3>
+                            <p class="team__list-position" lang="en">UI Designer</p>
                             <ul class="social-list">
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
-                                    <a class="social-list-link" href="">
-                                        <svg class="social-icon">
+                                <li class="social-list__item">
+                                    <a class="social-list__link" href="">
+                                        <svg class="social-list__icon">
                                             <use href="./images/sprite.svg#linkedin"></use>
                                         </svg>
                                     </a>
@@ -295,7 +295,7 @@
             <section class="clients block">
                 <div class="container">
                     <h2 class="clients-title">Постоянные клиенты</h2>
-                    <ul class="clients-list">
+                    <ul class="clients__list">
                         <li class="clients-item">
                             <a class="clients-item-link" href="">
                                 <svg class="clients-icon" width="44.27" height="49.23">
@@ -367,29 +367,29 @@
                 <b class="uppertitle">присоединяйтесь</b>
                 <ul class="social-list-footer">
                     <li class="social-list-footer-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-icon">
+                        <a class="social-list__link" href="">
+                            <svg class="social-list__icon">
                                 <use href="./images/sprite.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-list-footer-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-icon">
+                        <a class="social-list__link" href="">
+                            <svg class="social-list__icon">
                                 <use href="./images/sprite.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-list-footer-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-icon">
+                        <a class="social-list__link" href="">
+                            <svg class="social-list__icon">
                                 <use href="./images/sprite.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-list-footer-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-icon">
+                        <a class="social-list__link" href="">
+                            <svg class="social-list__icon">
                                 <use href="./images/sprite.svg#linkedin"></use>
                             </svg>
                         </a>
