--- a/index.html
+++ b/index.html
@@ -296,51 +296,50 @@
                 <div class="container">
                     <h2 class="clients-title">Постоянные клиенты</h2>
                     <ul class="clients__list">
-                        <li class="clients-item">
-                            <a class="clients-item-link" href="">
-                                <svg class="clients-icon" width="44.27" height="49.23">
+                        <li class="clients__list-item">
+                            <a class="clients__list-link" href="">
+                                <svg class="clients__list-icon" width="44.27" height="49.23">
                                     <use href="./images/sprite.svg#logo-1"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a class="clients-item-link" href="">
-                                <svg class="clients-icon" width="40" height="52">
+                        <li class="clients__list-item">
+                            <a class="clients__list-link" href="">
+                                <svg class="clients__list-icon" width="40" height="52">
                                     <use href="./images/sprite.svg#logo-2"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a class="clients-item-link" href="">
-                                <svg class="clients-icon" width="41" height="42.6">
+                        <li class="clients__list-item">
+                            <a class="clients__list-link" href="">
+                                <svg class="clients__list-icon" width="41" height="42.6">
                                     <use href="./images/sprite.svg#logo-3"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a class="clients-item-link" href="">
-                                <svg class="clients-icon" width="79.66" height="42.02">
+                        <li class="clients__list-item">
+                            <a class="clients__list-link" href="">
+                                <svg class="clients__list-icon" width="79.66" height="42.02">
                                     <use href="./images/sprite.svg#logo-4"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a class="clients-item-link" href="">
-                                <svg class="clients-icon" width="59" height="47">
+                        <li class="clients__list-item">
+                            <a class="clients__list-link" href="">
+                                <svg class="clients__list-icon" width="59" height="47">
                                     <use href="./images/sprite.svg#logo-5"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a class="clients-item-link" href="">
-                                <svg class="clients-icon" width="88.48" height="45.44">
+                        <li class="clients__list-item">
+                            <a class="clients__list-link" href="">
+                                <svg class="clients__list-icon" width="88.48" height="45.44">
                                     <use href="./images/sprite.svg#logo-6"></use>
                                 </svg>
                             </a>
                         </li>
                     </ul>
                 </div>
-
             </section>
     </main>
 
