--- a/index.html
+++ b/index.html
@@ -349,45 +349,45 @@
             <div class="footer-left-side">
                 <a href="./index.html" class="footer-logo"><span>Web</span>Studio</a>
                 <address class="address">
-                    <ul class="address-list">
-                        <li class="address-item">
-                            <p class="adress-place">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="address__list">
+                        <li class="address__list-item">
+                            <p class="address__list-place">г. Киев, пр-т Леси Украинки, 26</p>
                         </li>
-                        <li class="address-item">
-                            <a href="mailto:info@devstudio.com" class="adress-info">info@devstudio.com</a>
+                        <li class="address__list-item">
+                            <a href="mailto:info@devstudio.com" class="adress__list-link">info@devstudio.com</a>
                         </li>
-                        <li class="address-item">
-                            <a href="tel:+380961111111" class="adress-info">+38 096 111 11 11</a>
+                        <li class="address__list-item">
+                            <a href="tel:+380961111111" class="adress__list-link">+38 096 111 11 11</a>
                         </li>
                     </ul>
                 </address>
             </div>          
             <div class="footer-social-side">
                 <b class="uppertitle">присоединяйтесь</b>
-                <ul class="social-list-footer">
-                    <li class="social-list-footer-item">
-                        <a class="social-list__link" href="">
+                <ul class="footer-social-side_list">
+                    <li class="footer-social-side__item">
+                        <a class="footer-social-side__link social-list__link" href="">
                             <svg class="social-list__icon">
                                 <use href="./images/sprite.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list-footer-item">
-                        <a class="social-list__link" href="">
+                    <li class="footer-social-side__item">
+                        <a class="footer-social-side__link social-list__link" href="">
                             <svg class="social-list__icon">
                                 <use href="./images/sprite.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list-footer-item">
-                        <a class="social-list__link" href="">
+                    <li class="footer-social-side__item">
+                        <a class="footer-social-side__link social-list__link" href="">
                             <svg class="social-list__icon">
                                 <use href="./images/sprite.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list-footer-item">
-                        <a class="social-list__link" href="">
+                    <li class="footer-social-side__item">
+                        <a class="footer-social-side__link social-list__link" href="">
                             <svg class="social-list__icon">
                                 <use href="./images/sprite.svg#linkedin"></use>
                             </svg>
@@ -397,10 +397,10 @@
             </div>
             <div class="footer-right-side">
                 <b class="uppertitle">Подпишитесь на рассылку</b>
-                <form class="subscribe">
-                    <p class="subscribe-form">
+                <form class="form">
+                    <p class="form__subscribe">
                         <label for="email"></label>
-                        <input class="form-input" type="email" placeholder="E-mail">
+                        <input class="form__input" type="email" placeholder="E-mail">
                     </p>
                     
                     <button type="submit" class="subscribe-btn btn">Подписаться</button>
