--- a/portfolio.html
+++ b/portfolio.html
@@ -55,166 +55,166 @@
         <section class="portfolio block">
             <h1 class="visually-hidden">Портфолио</h1>
             <div class="container">
-                <ul class="filter-list">
-                    <li class="filter-list-item">
+                <ul class="portfolio__filter-list">
+                    <li class="portfolio__filter-list-item">
                         <button type="button"class="filter-btn">Все</button>
                     </li>
-                    <li class="filter-list-item">
+                    <li class="portfolio__filter-list-item">
                         <button type="button"class="filter-btn">Веб-сайты</button>
                     </li>
-                    <li class="filter-list-item">
+                    <li class="portfolio__filter-list-item">
                         <button type="button"class="filter-btn">Приложения</button>
                     </li>
-                    <li class="filter-list-item">
+                    <li class="portfolio__filter-list-item">
                         <button type="button"class="filter-btn">Дизайн</button>
                     </li>
-                    <li class="filter-list-item">
+                    <li class="portfolio__filter-list-item">
                         <button type="button"class="filter-btn">Маркетинг</button>
                     </li>
                 </ul>
 
-                <ul class="portfolio-list">
-                    <li class="portfolio-list-item">                        
-                        <a href="" class="portfolio-link">                            
+                <ul class="portfolio__list">
+                    <li class="portfolio__list-item">                        
+                        <a href="" class="portfolio__list-link">                            
                             <div class="portfolio-drawer-overlay">
                                 <img src="./images/portfolio/img-1.jpg" alt="открытый Macbook">
                                  <div class="portfolio-drawer">
-                                    <p class="drawer-desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                    <p class="portfolio-drawer__desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                  </div>
                             </div>                  
                             <div class="portfolio-title-block">
-                                <h2 class="portfolio-title">Технокряк</h2>
-                                <p class="portfolio-subtitle">Веб-сайт</p>
+                                <h2 class="portfolio-title-block__title">Технокряк</h2>
+                                <p class="portfolio-title-block__subtitle">Веб-сайт</p>
                             </div>
                             
                         </a>
                     </li>
-                    <li class="portfolio-list-item">
-                        <a href="" class="portfolio-link">
+                    <li class="portfolio__list-item">
+                        <a href="" class="portfolio__list-link">
                             <div class="portfolio-drawer-overlay">
                                 <img src="./images/portfolio/img-2.jpg" alt="баскетболисты борятся за мяч">
                                 <div class="portfolio-drawer">
-                                    <p class="drawer-desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    <p class="portfolio-drawer__desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                         платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
                             </div>
                             <div class="portfolio-title-block">
-                                <h2 class="portfolio-title">Постер New Orlean vs Golden Stars</h2>
-                                <p class="portfolio-subtitle">Дизайн</p>
+                                <h2 class="portfolio-title-block__title">Постер New Orlean vs Golden Stars</h2>
+                                <p class="portfolio-title-block__subtitle">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-list-item">
-                        <a href="" class="portfolio-link">
+                    <li class="portfolio__list-item">
+                        <a href="" class="portfolio__list-link">
                             <div class="portfolio-drawer-overlay">
                                 <img src="./images/portfolio/img-3.jpg" alt="логотип ресторана си-фуд">
                                 <div class="portfolio-drawer">
-                                    <p class="drawer-desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    <p class="portfolio-drawer__desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                         платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
                             </div>                            
                             <div class="portfolio-title-block">
-                                <h2 class="portfolio-title">Ресторан Seafood</h2>
-                                <p class="portfolio-subtitle">Приложение</p>
+                                <h2 class="portfolio-title-block__title">Ресторан Seafood</h2>
+                                <p class="portfolio-title-block__subtitle">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-list-item">
-                        <a href="" class="portfolio-link">
+                    <li class="portfolio__list-item">
+                        <a href="" class="portfolio__list-link">
                             <div class="portfolio-drawer-overlay">
                                 <img src="./images/portfolio/img-4.jpg" alt="беспроводные наушники на белом фоне">
                                 <div class="portfolio-drawer">
-                                    <p class="drawer-desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    <p class="portfolio-drawer__desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                         платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
                             </div>                            
                             <div class="portfolio-title-block">
-                                <h2 class="portfolio-title">Проект Prime</h2>
-                                <p class="portfolio-subtitle">Маркетинг</p>
+                                <h2 class="portfolio-title-block__title">Проект Prime</h2>
+                                <p class="portfolio-title-block__subtitle">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-list-item">
-                        <a href="" class="portfolio-link">
+                    <li class="portfolio__list-item">
+                        <a href="" class="portfolio__list-link">
                             <div class="portfolio-drawer-overlay">
                                 <img src="./images/portfolio/img-5.jpg" alt="две картонные коробки на белом фоне">
                                 <div class="portfolio-drawer">
-                                    <p class="drawer-desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    <p class="portfolio-drawer__desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                         платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
                             </div>                            
                             <div class="portfolio-title-block">
-                                <h2 class="portfolio-title">Проект Boxes</h2>
-                                <p class="portfolio-subtitle">Приложение</p>
+                                <h2 class="portfolio-title-block__title">Проект Boxes</h2>
+                                <p class="portfolio-title-block__subtitle">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-list-item">
-                        <a href="" class="portfolio-link">
+                    <li class="portfolio__list-item">
+                        <a href="" class="portfolio__list-link">
                             <div class="portfolio-drawer-overlay">
                                 <img src="./images/portfolio/img-6.jpg"" alt=" монитор на белом столе">
                                 <div class="portfolio-drawer">
-                                    <p class="drawer-desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    <p class="portfolio-drawer__desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                         платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
                             </div>                            
                             <div class="portfolio-title-block">
-                                <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                                <p class="portfolio-subtitle">Веб-сайт</p>
+                                <h2 class="portfolio-title-block__title">Inspiration has no Borders</h2>
+                                <p class="portfolio-title-block__subtitle">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-list-item">
-                        <a href="" class="portfolio-link">
+                    <li class="portfolio__list-item">
+                        <a href="" class="portfolio__list-link">
                             <div class="portfolio-drawer-overlay">
                                 <img src="./images/portfolio/img-7.jpg" alt="открытый женский журнал на столе">
                                 <div class="portfolio-drawer">
-                                    <p class="drawer-desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    <p class="portfolio-drawer__desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                         платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
                             </div>                            
                             <div class="portfolio-title-block">
-                                <h2 class="portfolio-title">Издание Limited Edition</h2>
-                                <p class="portfolio-subtitle">Дизайн</p>
+                                <h2 class="portfolio-title-block__title">Издание Limited Edition</h2>
+                                <p class="portfolio-title-block__subtitle">Дизайн</p>
                             </div> 
                         </a>
                     </li>
-                    <li class="portfolio-list-item">
-                        <a href="" class="portfolio-link">
+                    <li class="portfolio__list-item">
+                        <a href="" class="portfolio__list-link">
                             <div class="portfolio-drawer-overlay">
                                 <img src="./images/portfolio/img-8.jpg"" alt=" белый ярлык на бумажной веревке">
                                 <div class="portfolio-drawer">
-                                    <p class="drawer-desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    <p class="portfolio-drawer__desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                         платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
                             </div>                            
                             <div class="portfolio-title-block">
-                                <h2 class="portfolio-title">Проект LAB</h2>
-                                <p class="portfolio-subtitle">Маркетинг</p>
+                                <h2 class="portfolio-title-block__title">Проект LAB</h2>
+                                <p class="portfolio-title-block__subtitle">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="portfolio-list-item">
-                        <a href="" class="portfolio-link">
+                    <li class="portfolio__list-item">
+                        <a href="" class="portfolio__list-link">
                             <div class="portfolio-drawer-overlay">
                                 <img src="./images/portfolio/img-9.jpg" alt="человек работает на ноутбуке">
                                 <div class="portfolio-drawer">
-                                    <p class="drawer-desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    <p class="portfolio-drawer__desc">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                         платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
                                 </div>
                             </div>                            
                             <div class="portfolio-title-block">
-                                <h2 lang="en" class="portfolio-title">Growing Business</h2>
-                                <p class="portfolio-subtitle">Приложение</p>
+                                <h2 lang="en" class="portfolio-title-block__title">Growing Business</h2>
+                                <p class="portfolio-title-block__subtitle">Приложение</p>
                             </div>
                         </a>
                     </li>
