--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <!-- Подключение внешнего (external) CSS -->
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <body>
     <header class="header">
@@ -35,14 +35,14 @@
             <ul class="contacts-list">
                 <li class="contacts-list__item">
                         <a href="mailto:info@devstudio.com" class="contacts-list__link">
-                            <svg class="mail" width="16" height="12">
+                            <svg class="contacts-list__icon" width="16" height="12">
                                 <use href="./images/sprite.svg#mail"></use>
                             </svg>info@devstudio.com
                         </a>
                 </li>
                 <li class="contacts-list__item">
                     <a href="tel:+380961111111" class="contacts-list__link">
-                        <svg class="tel" width="10" height="16">
+                        <svg class="contacts-list__icon" width="10" height="16">
                             <use href="./images/sprite.svg#tel"></use>
                         </svg>+38 096 111 11 11
                     </a>
