--- a/portfolio.html
+++ b/portfolio.html
@@ -36,14 +36,14 @@
             <ul class="contacts-list">
                 <li class="contacts-list__item">
                     <a href="mailto:info@devstudio.com" class="contacts-list__link">
-                        <svg class="mail-icon" width="16" height="12">
+                        <svg class="contacts-list__icon" width="16" height="12">
                             <use href="./images/sprite.svg#mail"></use>
                         </svg>info@devstudio.com
                     </a>
                 </li>
                 <li class="contacts-list__item">
                     <a href="tel:+380961111111" class="contacts-list__link">
-                        <svg class="tel-icon" width="10" height="16">
+                        <svg class="contacts-list__icon" width="10" height="16">
                             <use href="./images/sprite.svg#tel"></use>
                         </svg>+38 096 111 11 11
                     </a>
